--- a/src/app/features/product/components/product/product.component.scss
+++ b/src/app/features/product/components/product/product.component.scss
@@ -101,3 +101,10 @@ img {
   width: 100%;
 }
 
+.prodButton{
+  margin: 1em;
+  margin-left: 0 auto;
+  flex: 1 1 auto;
+  background-color: #3F51B5;
+  color: white;
+}
