Comienzo modificar tienda

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -122,7 +122,7 @@
                     </span>
                   </mat-list-item>
                 </mat-list>
-                <mat-list role="list">
+                <!--<mat-list role="list">
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
@@ -134,7 +134,7 @@
                       </mat-chip>
                     </mat-chip-list>
                   </mat-list-item>
-                </mat-list>
+                </mat-list>-->
               </div>
               <div class="segundaColOculta">
                 <mat-list role="list">
