--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -11,7 +11,7 @@
         <mat-list-item role="productList">
           <mat-list role="list" *ngFor="let product of shop?.products">
             <mat-list-item role="listitem"
-              >Nombre: {{ product.product?.name }} Stock: {{ product.stock }}
+              >Nombre: {{ product.product.name }} Stock: {{ product.stock }}
             </mat-list-item>
           </mat-list>
         </mat-list-item>
