sign up with firebase

--- a/src/app/features/authentication/components/sign-up/sign-up.component.html
+++ b/src/app/features/authentication/components/sign-up/sign-up.component.html
@@ -11,6 +11,6 @@
       <input type="password" matInput formControlName="password"/>
       <mat-error>Invalid field</mat-error>
     </mat-form-field>
-    <button mat-raised-button color="primary" (click)="signUp()">Sign up</button>
+    <button mat-raised-button color="primary" (click)="signUpAdmin()">Sign up</button>
   </form>
 </div>
