Modificar categoria hecho

--- a/src/app/features/category/components/categories/categories.component.html
+++ b/src/app/features/category/components/categories/categories.component.html
@@ -62,7 +62,7 @@
         >
           <mat-expansion-panel-header *ngIf="category.active===true" class="category">
             <div class="info">
-              <button mat-raised-button class="prodButton" (click)="$event.stopPropagation(); modifyCategory(category.name)">
+              <button mat-raised-button class="prodButton" (click)="$event.stopPropagation(); modifyCategory(category.id)">
                 <mat-icon>edit</mat-icon>
               </button>
               <button mat-raised-button class="prodButton" (click)="$event.stopPropagation(); deleteCategory(category)">
