Button add admin

--- a/src/app/features/user/components/form-user/form-user.component.html
+++ b/src/app/features/user/components/form-user/form-user.component.html
@@ -1,4 +1,6 @@
 <div class="formUser">
+  <button [routerLink]="['/sign-up']" class="addAdminBtn" mat-raised-button color="primary">new Admin</button>
+
 <mat-accordion>
   <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
     <mat-expansion-panel-header>
