Se crea user service y se recuperan usuario de Firebase

--- a/src/app/features/user/components/list-user/list-user.component.html
+++ b/src/app/features/user/components/list-user/list-user.component.html
@@ -1,3 +1,4 @@
+<h1>Actived users</h1>
 <mat-list role="list" class="listUser">
   <mat-divider></mat-divider>
   <ng-container *ngFor="let user of users">
@@ -7,10 +8,51 @@
           (opened)="panelOpenState = true"
           (closed)="panelOpenState = false"
         >
-          <mat-expansion-panel-header>
+          <mat-expansion-panel-header *ngIf="user.active === true && !!user">
             <div class="info">
               <button mat-raised-button class="deleteButton" (click)="deleteUser(user)">
                 <mat-icon> delete_forever </mat-icon>
+              </button>
+              <mat-panel-title>
+                <mat-list-item role="listItem" class="user">{{
+                  user.name
+                }}</mat-list-item>
+              </mat-panel-title>
+            </div>
+          </mat-expansion-panel-header>
+          <div class="hiddenInfo" id="{{ user.name }}">
+            <div class="primeraColOculta">
+              <mat-list role="list">
+                <mat-list-item role="listitem">
+                  <div class="expansionContent">
+                    <span> Name: {{ user.name }} {{ user.surname }} </span>
+                    <span> Email: {{ user.email }} </span>
+                  </div>
+                </mat-list-item>
+              </mat-list>
+            </div>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+    <mat-divider></mat-divider>
+  </ng-container>
+</mat-list>
+<br>
+<h1>Inactive users</h1>
+<mat-list role="list" class="listUser">
+  <mat-divider></mat-divider>
+  <ng-container *ngFor="let user of users">
+    <div class="containerProd">
+      <mat-accordion>
+        <mat-expansion-panel
+          (opened)="panelOpenState = true"
+          (closed)="panelOpenState = false"
+        >
+          <mat-expansion-panel-header *ngIf="user.active === false && !!user">
+            <div class="info">
+              <button mat-raised-button class="deleteButton" (click)="activeUser(user)">
+                <mat-icon> autorenew </mat-icon>
               </button>
               <mat-panel-title>
                 <mat-list-item role="listItem" class="user">{{
