Modificar categoria hecho a falta de testing

--- a/src/app/features/category/components/categories/modifyCategory/modify-category/modify-category.component.scss
+++ b/src/app/features/category/components/categories/modifyCategory/modify-category/modify-category.component.scss
@@ -1,1 +1,11 @@
+.header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.buttonClose, .addButton{
+  background-color: #3847A0;
+  color: white;
+}
 
