--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -126,9 +126,11 @@
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
-                      <mat-chip *ngFor= "let category of product.categories" (removed) = "removeCategory(product, category)">
-                          <span> {{ category.id }} </span>
-                          <mat-icon matChipRemove> cancel </mat-icon>
+                      <mat-chip *ngFor="let category of product.categories">
+                        {{category.name}}
+                        <button matChipRemove>
+                          <mat-icon>cancel</mat-icon>
+                        </button>
                       </mat-chip>
                     </mat-chip-list>
                   </mat-list-item>
@@ -171,7 +173,7 @@
                   <mat-icon>edit</mat-icon>
                 </button>
                 <button mat-raised-button class="deleteButton" (click)="activeProduct(product)">
-                  <mat-icon>autorenew</mat-icon>
+                  <mat-icon>check_circle</mat-icon>
                 </button>
                 <mat-panel-title>
                   <mat-list-item role="listitem" class="product">{{
@@ -202,9 +204,11 @@
                   <mat-list-item role="listitem">
                     <span> Categories: </span>
                     <mat-chip-list #chipList aria-label="Category Selection" class="category-list">
-                      <mat-chip *ngFor= "let category of product.categories" (removed) = "removeCategory(product, category)">
-                          <span> {{ category.id }} </span>
-                          <mat-icon matChipRemove> cancel </mat-icon>
+                      <mat-chip *ngFor="let category of product.categories">
+                        {{category}}
+                        <button matChipRemove>
+                          <mat-icon>cancel</mat-icon>
+                        </button>
                       </mat-chip>
                     </mat-chip-list>
                   </mat-list-item>
