--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.scss
@@ -1,35 +1,9 @@
 .nameShop{
   font-weight: bold;
-  font-size: 20px;
 }
 
-.divShop{
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-}
-
-.divImage{
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  width: 100px;
-  height: auto;
-}
-
-.divStock{
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: center;
-}
-
-.stockButton{
-  margin: 10px;
-  height: auto;
-  width: 200px;
-}
-
-.stockInput{
-  min-width: 20px;
+.closeButton{
+  margin-right: 0px;
+  background-color: red;
+  color: white;
 }
