Added change stock of shop products

--- a/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
+++ b/src/app/features/shop/components/products-list-shop/products-list-shop.component.html
@@ -41,7 +41,7 @@
         </mat-form-field>
         <button
           mat-raised-button
-          (click)="changeStock(productStock,units.value)"
+          (click)="changeStock(productStock,units.value, shop.id)"
           value="product"
           class="stockButton"
         >
